--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,5 +1,5 @@
 body {
-  --pink: rgb(255, 167, 196);
+  --pink: #2e8bbc;
   background-color: var(--bg);
 }
 
@@ -8,7 +8,7 @@ body.light {
   --header: var(--pink);
   --textNormal: #222;
   --textTitle: #222;
-  --textLink: #d23669;
+  --textLink: #2e8bbc;
   --hr: hsla(0, 0%, 0%, 0.2);
   --inlineCode-bg: rgba(255, 229, 100, 0.2);
   --inlineCode-text: #1a1a1a;
